--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="Css/all.min.css">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
+    <link rel="stylesheet" href="Css/">
 </head>
 <body>
 
@@ -13,12 +14,14 @@
        <a href="index.html" class=""> <button class="btn btn-dark m-3 "> Logout </button> </a> 
     </div>
 
-    <div class="d-flex justify-content-center align-items-center w-100 vh-100">
-        <h1 class="text-bg-dark rounded-2 text-light p-5 shadow-lg">welcome to home page</h1>
-    </div>
-
+   <div class="welcome">
+     <div class="d-flex justify-content-center align-items-center w-100 vh-100">
+         <h1 class="text-bg-dark rounded-2 text-light p-5 shadow-lg">welcome to home page</h1>
+     </div>
+    
+   </div>
 
     <script src="Js/bootstrap.bundle.min.js"></script>
-    <script src="Js/main.js"></script>
+    <script src="Js/home.js"></script>
 </body>
 </html>
