--- a/home.html
+++ b/home.html
@@ -6,11 +6,11 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="Css/all.min.css">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
-    <link rel="stylesheet" href="Css/">
+    <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
 
-    <div class="w-100 bg-light d-flex justify-content-end position-fixed"> 
+    <div class="w-100 bg-light d-flex justify-content-end fixed-top"> 
        <a href="index.html" class=""> <button class="btn btn-dark m-3 "> Logout </button> </a> 
     </div>
 
